--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     <!-- AR Scene -->
     <a-scene
       vr-mode-ui="enabled: false"
-      embedded
       renderer="logarithmicDepthBuffer: true;"
-      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;">
+      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;">
 
         <!-- Place your animation in front of the camera -->
         <a-entity position="0 0 -2">
@@ -58,3 +57,4 @@
     </a-scene>
 </body>
 </html>
+
