--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
     <!-- AR Scene -->
     <a-scene
-      vr-mode-ui="enabled: false"
-      renderer="logarithmicDepthBuffer: true;"
-      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;">
+  vr-mode-ui="enabled: false"
+  embedded
+  renderer="logarithmicDepthBuffer: true;"
+  arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;">
 
         <!-- Place your animation in front of the camera -->
         <a-entity position="0 0 -2">
@@ -57,4 +58,5 @@
     </a-scene>
 </body>
 </html>
+
 
