--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- A-Frame + AR.js -->
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-ar@1.8.0/dist/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
+
 
     <style>
         body {
@@ -58,5 +59,6 @@
     </a-scene>
 </body>
 </html>
+
 
 
