--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>WebAR Camera Test</title>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-  </head>
-  <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
-      <a-box position="0 0 -3" color="tomato"></a-box>
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
-</html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebAR PNG Sequence Animation</title>
 
+  <!-- A-Frame + AR.js -->
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
+
+  <style>
+    body { margin: 0; overflow: hidden; }
+  </style>
+</head>
+<body>
+
+<a-scene
+  embedded
+  vr-mode-ui="enabled: false"
+  arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;">
+
+  <!-- Plane to display animation -->
+  <a-plane id="anim-plane" position="0 0 -2" width="1" height="1" material="src: url(frames/frame_001.png); transparent: true"></a-plane>
+
+  <a-entity camera></a-entity>
+</a-scene>
+
+<script>
+  const totalFrames = 131; // Change this to the number of PNG frames you have
+  const plane = document.querySelector('#anim-plane');
+  let currentFrame = 1;
+
+  function animate() {
+    // Build file path (adjust folder/filenames if needed)
+    const frameNumber = String(currentFrame).padStart(4, '0');
+    const url = `frames/frame_${frameNumber}.png`;
+
+    // Update plane material
+    plane.setAttribute('material', `src: url(${url}); transparent: true`);
+
+    currentFrame = currentFrame < totalFrames ? currentFrame + 1 : 1;
+
+    // Next frame ~30fps
+    setTimeout(animate, 33);
+  }
+
+  animate();
+</script>
+
+</body>
+</html>
 
 
 
