--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   device-orientation-permission-ui="enabled: true"
 
   <!-- Plane to display animation -->
-  <a-plane id="anim-plane" position="0 0 0" width="1" height="1" material="src: url(frames/frame_0001.png); transparent: true"></a-plane>
+  <a-plane id="anim-plane" position="0 1.5 -3" width="1.5" height="1.5" material="src: url(frames/frame_0001.png); transparent: true"></a-plane>
 
-  <a-entity camera></a-entity>
+  <a-entity camera position="0 1.6 0"></a-entity>
 </a-scene>
 
 <script>
