--- a/index.html
+++ b/index.html
@@ -4,47 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebAR PNG Sequence Animation</title>
-
-  <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-
-  <style>
-    body { margin: 0; overflow: hidden; }
-  </style>
+  <style>body { margin: 0; overflow: hidden; }</style>
 </head>
 <body>
 
 <a-scene
   embedded
   vr-mode-ui="enabled: false"
-   arjs="sourceType: webcam; trackingMethod: best; displayWidth: 1280; displayHeight: 720; debugUIEnabled: false;"
+  arjs="sourceType: webcam; trackingMethod: best; displayWidth: 1280; displayHeight: 720; debugUIEnabled: false;"
   renderer="antialias: true; alpha: true;"
-  device-orientation-permission-ui="enabled: true"
+  device-orientation-permission-ui="enabled: true">
 
-  <!-- Plane to display animation -->
-  <a-plane id="anim-plane" position="0 1.5 -3" width="1.5" height="1.5" material="src: url(frames/frame_0001.png); transparent: true"></a-plane>
+  <!-- Animation plane -->
+  <a-plane id="anim-plane" position="0 0 -2" width="1.5" height="1.5"
+           material="src: url(frames/frame_0001.png); transparent: true">
+  </a-plane>
 
-  <a-entity camera position="0 1.6 0"></a-entity>
+  <a-entity camera></a-entity>
 </a-scene>
 
 <script>
-  const totalFrames = 131; // Change this to the number of PNG frames you have
+  const totalFrames = 30; // Adjust for your PNG count
   const plane = document.querySelector('#anim-plane');
   let currentFrame = 1;
 
   function animate() {
-    // Build file path (adjust folder/filenames if needed)
     const frameNumber = String(currentFrame).padStart(4, '0');
     const url = `frames/frame_${frameNumber}.png`;
 
-    // Update plane material
-    plane.setAttribute('material', `src: url(${url}); transparent: true`);
+    plane.setAttribute('material', `src: url(${url}); transparent: true;`);
 
     currentFrame = currentFrame < totalFrames ? currentFrame + 1 : 1;
 
-    // Next frame ~30fps
-    setTimeout(animate, 33);
+    setTimeout(animate, 33); // ~30fps
   }
 
   animate();
@@ -52,6 +46,8 @@
 
 </body>
 </html>
+
+
 
 
 
