--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   embedded
   vr-mode-ui="enabled: false"
   arjs="sourceType: webcam; trackingMethod: best; displayWidth: 1280; displayHeight: 720; debugUIEnabled: false;"
+  arjs="sourceType: webcam; cameraParametersUrl: https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@master/data/data/camera_para.dat; debugUIEnabled: false;"
   renderer="antialias: true; alpha: true;"
   device-orientation-permission-ui="enabled: true">
 
@@ -49,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
