--- a/index.html
+++ b/index.html
@@ -1,55 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebAR PNG Sequence Animation</title>
-  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-  <style>body { margin: 0; overflow: hidden; }</style>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>AR PNG Sequence Animation (Auto Detect)</title>
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; }
+    </style>
+  </head>
 
-<a-scene
-  embedded
-  vr-mode-ui="enabled: false"
-  arjs="sourceType: webcam; trackingMethod: best; displayWidth: 1280; displayHeight: 720; debugUIEnabled: false;"
-  arjs="sourceType: webcam; cameraParametersUrl: https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@master/data/data/camera_para.dat; debugUIEnabled: false;"
-  renderer="antialias: true; alpha: true;"
-  device-orientation-permission-ui="enabled: true">
+  <body>
+    <a-scene
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+      vr-mode-ui="enabled: false"
+      renderer="logarithmicDepthBuffer: true;"
+    >
+      <a-assets id="assets"></a-assets>
 
-  <!-- Animation plane -->
-  <a-plane id="anim-plane" position="0 0 -3" width="3" height="5"
-           material="src: url(frames/frame_0001.png); transparent: true; opacity: 1.0;">
-  </a-plane>
+      <a-marker preset="hiro">
+        <a-plane id="animPlane"
+          position="0 0 0"
+          rotation="-90 0 0"
+          width="1"
+          height="1"
+          material="transparent: true;"
+        ></a-plane>
+      </a-marker>
 
-  <a-entity camera></a-entity>
-</a-scene>
+      <a-entity camera></a-entity>
+    </a-scene>
 
-<script>
-  const totalFrames = 131; // Adjust for your PNG count
-  const plane = document.querySelector('#anim-plane');
-  let currentFrame = 1;
+    <script>
+      // 🔍 Automatically detect and load frames
+      const assetsEl = document.getElementById("assets");
+      const plane = document.getElementById("animPlane");
 
-  function animate() {
-    const frameNumber = String(currentFrame).padStart(4, '0');
-    const url = `frames/frame_${frameNumber}.png`;
+      // GitHub Pages doesn’t allow directory listing, so we define frames dynamically
+      // by testing frame1.png, frame2.png, etc. until one is missing.
+      let frameIndex = 1;
+      const framePaths = [];
 
-    plane.setAttribute('material', `src: url(${url}); transparent: true;`);
+      async function checkFrames() {
+        while (true) {
+          const path = `assets/frame${frameIndex}.png`;
+          try {
+            const res = await fetch(path, { method: 'HEAD' });
+            if (!res.ok) break;
+            framePaths.push(path);
+            frameIndex++;
+          } catch {
+            break;
+          }
+        }
 
-    currentFrame = currentFrame < totalFrames ? currentFrame + 1 : 1;
+        if (framePaths.length === 0) {
+          console.error("❌ No frames found in /assets/ named frame1.png, frame2.png...");
+          return;
+        }
 
-    setTimeout(() => {
-  animate();
-}, 3000); // 3 seconds
+        // Add <img> tags to <a-assets> for preloading
+        framePaths.forEach((path, i) => {
+          const img = document.createElement("img");
+          img.setAttribute("id", `frame${i+1}`);
+          img.setAttribute("src", path);
+          assetsEl.appendChild(img);
+        });
 
-  }
+        // Start animation
+        animateFrames();
+      }
 
-  animate();
-</script>
+      function animateFrames() {
+        let currentFrame = 0;
+        const frameDelay = 150; // ms per frame
+        const totalFrames = framePaths.length;
 
-</body>
+        setInterval(() => {
+          currentFrame = (currentFrame + 1) % totalFrames;
+          const srcId = `#frame${currentFrame + 1}`;
+          plane.setAttribute("material", "src", srcId);
+        }, frameDelay);
+      }
+
+      checkFrames();
+    </script>
+  </body>
 </html>
+
+
 
 
 
