--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
       <a-marker preset="hiro">
         <a-plane id="animPlane"
-          position="0 0 0"
+          position="0 0.5 0"
           rotation="-90 0 0"
-          width="1"
-          height="1"
-          material="transparent: true;"
+          width="2"
+          height="3"
+          material="transparent: true; opacity: 1;"
         ></a-plane>
       </a-marker>
 
