--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           plane.setAttribute('material', {
             src: srcId,
             transparent: true,
-            alphaTest: 0.01,    // Adjust this value (0.1 to 0.5)
+            alphaMode: 'blend',  // Adjust this value (0.1 to 0.5)
             opacity: 1,
             side: 'double'     // Render both sides
           });
@@ -136,5 +136,6 @@
     </script>
   </body>
 </html>
+
 
 
