--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <!-- DIRECT IMAGE APPROACH - No preloading -->
-        <a-image
-          id="animatedImage"
-          src="assets/frame_0001.png"
-          width="2"
-          height="2"
-          position="0 0.5 0"
-          transparent="true"
-          alpha-test="0.1"
-        ></a-image>
+       <a-image src="assets/frame_0001.png" width="2" height="2"></a-image>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
@@ -36,3 +28,4 @@
     </script>
   </body>
 </html>
+
