--- a/index.html
+++ b/index.html
@@ -1,45 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Hiro Marker</title>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
     <style>
-        body { 
-            margin: 0; 
-            padding: 20px; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            min-height: 100vh;
-            background: #f0f0f0;
-        }
-        .marker-container {
-            text-align: center;
-        }
-        .marker {
-            width: 400px;
-            height: 400px;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .instructions {
-            margin-top: 20px;
-            font-family: Arial;
-        }
+      body { margin: 0; padding: 0; width: 100vw; height: 100vh; overflow: hidden; }
+      a-scene { width: 100%; height: 100%; display: block; }
     </style>
-</head>
-<body>
-    <div class="marker-container">
-        <div class="marker">
-            <img src="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/images/hiro.png" 
-                 width="360" height="360" alt="Hiro Marker">
-        </div>
-        <div class="instructions">
-            <h3>Hiro Marker Instructions:</h3>
-            <p>1. Print this marker or display on another device</p>
-            <p>2. Point your camera at the marker</p>
-            <p>3. The AR content should appear on top of the marker</p>
-        </div>
-    </div>
-</body>
+  </head>
+  <body>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
+      <a-marker preset="hiro">
+        <a-box color="blue" position="0 0.5 0" scale="0.5 0.5 0.5" 
+               animation="property: rotation; to: 0 360 0; loop: true; dur: 2000"></a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
