--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple WebAR - Model Viewer</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <style>
-        body { margin: 0; padding: 20px; font-family: Arial; }
-        model-viewer { width: 100%; height: 400px; }
-    </style>
+    <title>Simple 3D Demo</title>
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 </head>
 <body>
-    <h1>Simple WebAR Example</h1>
-    <p>Click the AR button to view in your space</p>
-    
-    <model-viewer
-        src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-        alt="A 3D model of an astronaut"
-        ar
-        ar-modes="webxr scene-viewer quick-look"
-        environment-image="neutral"
-        auto-rotate
-        camera-controls
-    >
-    </model-viewer>
-    
-    <p>Works on Android (Chrome) and iOS (Safari)</p>
+    <a-scene>
+        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" 
+               animation="property: rotation; to: 0 405 0; loop: true; dur: 4000"></a-box>
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"
+                  animation="property: position; to: 0 2.25 -5; loop: true; dir: alternate; dur: 2000"></a-sphere>
+        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"
+                    animation="property: rotation; to: 90 0 0; loop: true; dir: alternate; dur: 2000"></a-cylinder>
+        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
 </body>
 </html>
