--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple 3D Demo</title>
+    <title>PNG Sequence WebAR</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.js"></script>
+    <style>
+        body { margin: 0; overflow: hidden; }
+    </style>
 </head>
 <body>
-    <a-scene>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" 
-               animation="property: rotation; to: 0 405 0; loop: true; dur: 4000"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"
-                  animation="property: position; to: 0 2.25 -5; loop: true; dir: alternate; dur: 2000"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"
-                    animation="property: rotation; to: 90 0 0; loop: true; dir: alternate; dur: 2000"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
+    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+        <a-marker preset="hiro">
+            <a-plane
+                id="animatedPlane"
+                src="frames/frame_0001.png"
+                width="1.5"
+                height="1.5"
+                position="0 1 0"
+                transparent="true"
+                alpha-test="0.1"
+                material="src: frames/frame_0001.png; 
+              transparent: true; 
+              alphaTest: 0.05;
+              opacity: 1;"
+            ></a-plane>
+        </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
+
+    <script>
+        // Simple animation loop
+        const plane = document.getElementById('animatedPlane');
+        let currentFrame = 1;
+        const totalFrames = 120; // Your frame count
+        const fps = 30;
+
+        setInterval(() => {
+            currentFrame = (currentFrame % totalFrames) + 1;
+            const frameNum = String(currentFrame).padStart(4, '0');
+            plane.setAttribute('material', 'src', `frames/frame_${frameNum}.png`);
+        }, 1000 / fps);
+    </script>
 </body>
 </html>
