--- a/index.html
+++ b/index.html
@@ -1,45 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PNG Sequence WebAR</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.js"></script>
-    <style>
-        body { margin: 0; overflow: hidden; }
-    </style>
 </head>
 <body>
-    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-        <a-marker preset="hiro">
-            <a-plane
-                id="animatedPlane"
-                src="frames/frame_0001.png"
-                width="1.5"
-                height="1.5"
-                position="0 1 0"
-                transparent="true"
-                alpha-test="0.1"
-                material="src: frames/frame_0001.png; 
-              transparent: true; 
-              alphaTest: 0.05;
-              opacity: 1;"
-            ></a-plane>
-        </a-marker>
+    <a-scene embedded arjs='sourceType: webcam; detectionMode: mono;'>
+        <a-entity
+            id="animation"
+            geometry="primitive: plane; width: 1.5; height: 1.5"
+            material="transparent: true; alphaTest: 0.1"
+            position="0 0 -1"
+        ></a-entity>
         <a-entity camera></a-entity>
     </a-scene>
 
     <script>
-        // Simple animation loop
-        const plane = document.getElementById('animatedPlane');
-        let currentFrame = 1;
-        const totalFrames = 120; // Your frame count
-        const fps = 30;
-
+        let frame = 1;
         setInterval(() => {
-            currentFrame = (currentFrame % totalFrames) + 1;
-            const frameNum = String(currentFrame).padStart(4, '0');
-            plane.setAttribute('material', 'src', `frames/frame_${frameNum}.png`);
-        }, 1000 / fps);
+            frame = (frame % 120) + 1;
+            document.getElementById('animation').setAttribute('material', 'src', 
+                `assets/frame_${String(frame).padStart(4, '0')}.png`);
+        }, 33); // 30fps
     </script>
 </body>
 </html>
+
