--- a/index.html
+++ b/index.html
@@ -6,23 +6,14 @@
 </head>
 <body>
     <a-scene embedded arjs='sourceType: webcam; detectionMode: mono;'>
-        <a-entity
-            id="animation"
-            geometry="primitive: plane; width: 1.5; height: 1.5"
-            material="transparent: true; alphaTest: 0.1"
-            position="0 0 -1"
-        ></a-entity>
+        <a-image
+            src="assets/frame_0001.png"
+            width="1.5"
+            height="1.5"
+            position="0 0 -2"
+            transparent="true"
+        ></a-image>
         <a-entity camera></a-entity>
     </a-scene>
-
-    <script>
-        let frame = 1;
-        setInterval(() => {
-            frame = (frame % 120) + 1;
-            document.getElementById('animation').setAttribute('material', 'src', 
-                `assets/frame_${String(frame).padStart(4, '0')}.png`);
-        }, 33); // 30fps
-    </script>
 </body>
 </html>
-
