--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         }
         
         .file-item {
-            background-color: #285f2f;
+            background-color: #f5f7fa;
             border: 1px solid #285f2f;
             border-radius: 8px;
             padding: 15px;
@@ -249,5 +249,6 @@
     </script>
 </body>
 </html>
+
 
 
